--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>GPTLLE</title>
+    <title>GMPT</title>
   </head>
   <body>
-    <h1>GPTLLE</h1>
+    <h1>GM replies with GPT</h1>
   </body>
 </html>
